--- a/wordcloud_config.json
+++ b/wordcloud_config.json
@@ -20,12 +20,12 @@
     "been"
   ],
   "color_mode": "preset",
-  "color_scheme": "Mint",
+  "color_scheme": "Viridis",
   "single_color": "#0078D4",
   "custom_colors": [
     "#FF0000",
     "#00FF00",
-    "#c93636"
+    "#0000FF"
   ],
   "prefer_horizontal": 0.9,
   "background_color": "#FFFFFF",
@@ -33,5 +33,5 @@
   "mask_type": "no_mask",
   "mask_path": "No mask",
   "contour_color": "#000000",
-  "working_directory": "C:/Users/miguel/Downloads/Papers"
+  "working_directory": "No folder selected"
 }
