Force Windows taskbar icon update using ctypes
- Added SetCurrentProcessExplicitAppUserModelID to set unique app ID
- Added SendMessageW to force icon refresh on taskbar
- Wrapped in try/except to handle gracefully if it fails
- Already included ctypes in PyInstaller hidden imports

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -91,6 +91,8 @@ jobs:
                 'PIL._tkinter_finder',
                 'markdown2',
                 'numpy',
+                'ctypes',
+                'ctypes.wintypes',
             ],
             hookspath=[],
             hooksconfig={},
