Add runtime hook to set app ID before Python starts
- Created runtime_hook.py to set Windows App User Model ID early
- This runs before any Python UI code, avoiding icon caching
- Updated spec files to use the runtime hook
- Simplified main() function icon handling
- Should finally fix persistent taskbar icon issue

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -96,7 +96,7 @@ jobs:
             ],
             hookspath=[],
             hooksconfig={},
-            runtime_hooks=[],
+            runtime_hooks=['runtime_hook.py'],
             excludes=[],
             noarchive=False,
         )
